Bug 633433: Limit plugin loading to Flash when we're trying to clear private data, but also clear anything else that happens to be open already. r=dwitte r=bsmedberg a=blocking2.0final+